[package]
name = "reqs"
version = "0.1.0"
authors = ["melsiddieg@gmail.com <melsiddieg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10.9",features = ["json"] }
serde = { version ="1.0.118",features =["derive"] }
futures = "0.3.8"